--- a/WeatherApp/app/src/main/res/layout/new_app_widget.xml
+++ b/WeatherApp/app/src/main/res/layout/new_app_widget.xml
@@ -11,11 +11,10 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/widget_layout_margin"
         android:background="?attr/appWidgetBackgroundColor"
-        android:contentDescription="@string/appwidget_text"
         android:text="@string/appwidget_text"
         android:textColor="?attr/appWidgetTextColor"
-        android:textSize="24sp"
+        android:textSize="@dimen/widget_text_size"
         android:textStyle="bold|italic" />
 </RelativeLayout>
