--- a/WeatherApp/app/src/main/res/values/dimens.xml
+++ b/WeatherApp/app/src/main/res/values/dimens.xml
@@ -11,4 +11,6 @@ Refer to App Widget Documentation for margin information
 http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
     -->
     <dimen name="widget_margin">0dp</dimen>
+    <dimen name="widget_layout_margin">8dp</dimen>
+    <dimen name="widget_text_size">24sp</dimen>
 </resources>
