6 дз. Возврашаю в общий доступ apikey.properties для возможности проверки дз.

--- a/WeatherApp/app/src/main/res/layout/detail_fragment.xml
+++ b/WeatherApp/app/src/main/res/layout/detail_fragment.xml
@@ -76,4 +76,19 @@
             android:textStyle="bold"
             tools:text="" />
     </LinearLayout>
+    <FrameLayout
+        android:id="@+id/loadingLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/loadingBackground"
+        android:visibility="gone"
+        tools:visibility="invisible">
+
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
+
+    </FrameLayout>
 </FrameLayout>
