--- a/WeatherApp/app/src/main/res/layout/detail_fragment.xml
+++ b/WeatherApp/app/src/main/res/layout/detail_fragment.xml
@@ -11,7 +11,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+        <ImageView
+            android:id="@+id/image_View"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
 
+            />
         <TextView
             android:id="@+id/cityName"
             android:layout_width="match_parent"
